# Hawk-TUI

./: .gitignore  LICENSE  README.md  TODO.md  config.example.toml  pyproject.toml
src/hawk_tui/: __init__.py  __main__.py  app.py  config.py
src/hawk_tui/core/: __init__.py  account.py  folder.py  message.py
src/hawk_tui/imap/: __init__.py  client.py  idle.py  sync.py
src/hawk_tui/rendering/: __init__.py  browser.py  engine.py  images.py  text.py
src/hawk_tui/smtp/: __init__.py  client.py
src/hawk_tui/spam/: __init__.py  classifier.py  tokenizer.py
src/hawk_tui/storage/: __init__.py  database.py  repository.py
src/hawk_tui/ui/: __init__.py
src/hawk_tui/ui/screens/: __init__.py  compose.py  file_picker.py  main.py  password.py  search.py
src/hawk_tui/ui/styles/: app.tcss
src/hawk_tui/ui/widgets/: __init__.py  folder_tree.py  html_content.py  message_list.py  message_preview.py
tests/: __init__.py  conftest.py
